# mdns-helpers

./: README.md  pyproject.toml
examples/: sample-config.json
examples/movies/: index.html
mdns_helpers/: __init__.py  __main__.py  cli.py  config.py  generator.py  install.py  models.py  uninstall.py
scripts/: install.py  uninstall.py
tests/: test_mdns_helpers.py
