[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdns-helpers"
version = "0.1.0"
description = "Generate and maintain local DNS, proxy, and mDNS artifacts for macOS and Ubuntu."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
mdns-helpers = "mdns_helpers.cli:main"
